added name age and spouse inputs and submit button.

--- a/main.html
+++ b/main.html
@@ -1,6 +1,11 @@
 <html>
-    <body>
-        <script type="module" src="./main.js"></script>
-    </body>
-</html>
-
+<body>
+<form>
+    <input type="text" placeholder = "name">
+    <input type="text" placeholder = "age">
+    <input type="text" placeholder = "spouse"><br><br>
+    <input type="button" value="Add Person"></input>
+ </form>
+    <script type="module" src="./main.js"></script>
+ </body>
+ </html>
