Trying to resolve issue where files saved won't update on browser.

--- a/main.html
+++ b/main.html
@@ -1,11 +1,11 @@
 <html>
 <body>
 <form>
-    <input type="text" placeholder = "name">
-    <input type="text" placeholder = "age">
-    <input type="text" placeholder = "spouse"><br><br>
-    <input type="button" value="Add Person"></input>
+   <script type="module" src="./main.js"></script>
+      <input type="text" placeholder = "name">
+      <input type="text" placeholder = "age">
+      <input type="text" placeholder = "spouse"><br><br>
+      <input type="button" value="Add Person" onClick='ui.addInput()'>
  </form>
-    <script type="module" src="./main.js"></script>
  </body>
  </html>
