--- a/test.html
+++ b/test.html
@@ -1,6 +1,9 @@
-
-<form>
-
-
-    <input type = "text">
-</form>
+<script>
+class Ui{
+    test(){
+        console.log('test1')
+    }
+}
+var ui = new Ui()
+</script>
+<input type='button' value='Test' onClick='ui.test()'>
