--- a/old/index.html
+++ b/old/index.html
@@ -5,12 +5,11 @@
    <script type="module">
       import {test1, Ui} from "./src/modules/Ui.js"
 			window.test1 = test1
+         window.name = "JP"
       const ui = new Ui()
       ui.test_ui()
    </script>
       <input type="text" placeholder = "name">
-      <input type="text" placeholder = "age">
-      <input type="text" placeholder = "spouse"><br><br>
       <input type="button" value="Add Person" onClick="test1()">
  </form>
  </body>
